<resources>
    <string name="app_name">TrainingAndroidApplication</string>
    <string name="text_button1">Linear Layout</string>
    <string name="text_button2">Grid Layout</string>
    <string name="text_button3">Relative Layout</string>
    <string name="text_button4">Constraint Layout</string>
    <string name="text_button5">Control elements</string>
    <string name="text_button6">Simple List View</string>
    <string name="text_button7">ListView with adapter</string>
    <string name="text_button8">Data transfer between activities</string>
    <string name="text_button9">Dialogs</string>
    <string name="text_button10">Notifications</string>
    <string name="text_button11">Fragments</string>
    <string name="text_button12">Action bar</string>
    <string name="text_button13">Expandable list</string>
    <string name="text_button14">Simple Adapter</string>
    <string name="text_button15">Grid View</string>
    <string name="text_button16">Service play music</string>
    <string name="text_button17">Write and read file</string>
    <string name="text_button18">Lifecycle</string>
    <string name="text_button19">Broadcast</string>
    <string name="text_button20">System Info</string>
    <string name="text_button21">**********</string>
    <string name="text_button22">**********</string>
    <string name="text_button23">**********</string>
    <string name="text_button24">**********</string>
    <string name="text_button25">**********</string>
    <string name="text_compot_and_moteld">Compot and Motel\'d</string>
    <string name="text_smollet">Capitan Smollet</string>
    <string name="text_off">Button off</string>
    <string name="text_on">Button on</string>
    <string name="title_activity_lifecycle">LifecycleActivity</string>


</resources>
